Added meta tags

--- a/index.html
+++ b/index.html
@@ -3,14 +3,45 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/garage.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brother's Automotive Garage</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Special+Elite&display=swap"
     rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brother's Automotive Garage - Expert Auto Repair Services</title>
+    <meta name="description" content="Brother's Automotive Garage offers expert auto repair services, including engine repair, brake services, and more. Serving the local community with quality and trust.">
+    <meta name="keywords" content="automotive garage, auto repair, engine repair, brake services, car maintenance, Brother's Automotive Garage">
+    <link rel="canonical" href="https://aman-shinde.github.io/brothers-garage/">
+    <meta property="og:title" content="Brother's Automotive Garage - Expert Auto Repair Services">
+    <meta property="og:description" content="Offering engine repair, brake services, and more. Quality you can trust.">
+    <meta property="og:image" content="https://aman-shinde.github.io/brothers-garage/public/garage.png">
+    <meta property="og:url" content="https://aman-shinde.github.io/brothers-garage/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Brother's Automotive Garage - Expert Auto Repair Services">
+    <meta name="twitter:description" content="Offering engine repair, brake services, and more. Quality you can trust.">
+    <meta name="twitter:image" content="https://aman-shinde.github.io/brothers-garage/public/garage.png">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AutoRepair",
+      "name": "Brother's Automotive Garage",
+      "description": "Expert auto repair services including engine repair, brake services, and more.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Hinjwadi Phase 2",
+        "addressLocality": "Pune",
+        "addressRegion": "Maharashtra",
+        "postalCode": "411057",
+        "addressCountry": "India"
+      },
+      "telephone": "+91-7758060594",
+      "url": "https://aman-shinde.github.io/brothers-garage/",
+      "image": "https://aman-shinde.github.io/brothers-garage/public/garage.png"
+    }
+    </script>
 </head>
 <style>
   * {
